Another great one from Marcus

--- a/quotes.org
+++ b/quotes.org
@@ -94,6 +94,10 @@ racing. The rest are merely games."
 "The best bridge between despair and hope is a good night’s sleep"
    - E. Joseph Cossman, American entrepreneur
 
+"You could leave life right now. Let that determine what you do and say and
+ think."
+   - Marcus Aurelius, Meditations
+
 "I think we get it wrong a lot, especially in this country. It's all about
  winning. Winning, winning, winning. People who are considered "winners" are in
  my mind, some of the great losers of all time and people who are considered
