added a death scene

--- a/files/film.org
+++ b/files/film.org
@@ -3,6 +3,11 @@
 
 * Scenes worth remembering
 ** Death Scenes
-*** Brother 33:53 in
+*** Action Jackson
+2:30
+start, extra kick woman through glass, extra flaming fall of doom
+*** Brother
+33:53
 *** Beyond Outrage or Outrage, seatbelt scene
 ** Stage scene in stagecoach?? A western
+at the end
