--- a/quotes.org
+++ b/quotes.org
@@ -126,6 +126,10 @@ racing. The rest are merely games."
 "Death destroys a man; the idea of Death saves him"
    - E. M. Forster
 
+"Don’t you ever let a soul in the world tell you that you can’t be exactly who
+ you are."
+   - Lady Gaga, [[https://www.nytimes.com/2020/02/27/opinion/lady-gaga-boyfriend.html][from here]]
+
 "The best bridge between despair and hope is a good night’s sleep"
    - E. Joseph Cossman, American entrepreneur
 
