--- a/quotes.org
+++ b/quotes.org
@@ -137,6 +137,10 @@ racing. The rest are merely games."
  you are."
    - Lady Gaga, [[https://www.nytimes.com/2020/02/27/opinion/lady-gaga-boyfriend.html][from here]]
 
+"If you only read the books that everyone else is reading, you can only think
+ what everyone else is thinking."
+   - Haruki Murakami, Norwegian Wood
+
 "The best bridge between despair and hope is a good night’s sleep"
    - E. Joseph Cossman, American entrepreneur
 
