--- a/quotes.org
+++ b/quotes.org
@@ -190,6 +190,12 @@ racing. The rest are merely games."
  context (Perugni et al, 2016)"
    - [[https://medium.com/@Soccermatics/how-swedes-were-fooled-by-one-of-the-biggest-scientific-bluffs-of-our-time-de47c82601ad][How Swedes Were Fooled]]
 
+"Life is at your hands, not others. Everyone needs to strive and struggle on his
+ or her own. A better world can be made and they are making it happen. That's
+ the faith of the people living in the cave houses on the Loess Plateau."
+   - Lu Yao, World of Plainness
+
+
 
 * Literature
 “Lina’s hair is down and her dark eyes, fresh from church, have a familiarly
