--- a/quotes.org
+++ b/quotes.org
@@ -203,6 +203,11 @@ racing. The rest are merely games."
    - Philip Roth Portnoy’s Complaint
 
 
+* Love
+"It doesn't matter how I see you, just so I see you."
+   - Kay Lawrence, I Walk Alone
+
+
 * Motivation
 :Ire-Glass:
 "Nobody tells this to people who are beginners, I wish someone told me. All of
